solutions/secure-hybrid-network/nestedtemplates/mock-onprem-azuredeploy.bicep
param adminUserName string

@secure()
param adminPassword string
param mocOnpremNetwork object = {
  name: 'vnet-onprem'
  addressPrefix: '192.168.0.0/16'
  subnetName: 'mgmt'
  subnetPrefix: '192.168.1.128/25'
}
param mocOnpremGateway object = {
  name: 'vpn-mock-prem'
  subnetName: 'GatewaySubnet'
  subnetPrefix: '192.168.255.224/27'
  publicIPAddressName: 'pip-onprem-vpn-gateway'
}
param bastionHost object = {
  name: 'AzureBastionHost'
  subnetName: 'AzureBastionSubnet'
  subnetPrefix: '192.168.254.0/26'
  publicIPAddressName: 'pip-bastion'
  nsgName: 'nsg-hub-bastion'
}
param vmSize string = 'Standard_D2s_v3'
param configureSitetosite bool = true
param location string  = resourceGroup().location

var nicNameWindowsName = 'nic-windows'
var vmNameWindowsName = 'vm-windows'
var windowsOSVersion = '2025-datacenter-smalldisk-g2'

resource mocOnpremNetworkResource 'Microsoft.Network/virtualNetworks@2024-05-01' = {
  name: mocOnpremNetwork.name
  location: location
  properties: {
    addressSpace: {
      addressPrefixes: [
        mocOnpremNetwork.addressPrefix
      ]
    }
    subnets: [
      {
        name: mocOnpremNetwork.subnetName
        properties: {
          defaultOutboundAccess: false
          addressPrefix: mocOnpremNetwork.subnetPrefix
        }
      }
      {
        name: mocOnpremGateway.subnetName
        properties: {
          defaultOutboundAccess: false
          addressPrefix: mocOnpremGateway.subnetPrefix
        }
      }
      {
        name: bastionHost.subnetName
        properties: {
          addressPrefix: bastionHost.subnetPrefix
          defaultOutboundAccess: false
        }
      }
    ]
  }
}

resource mocOnpremGateway_publicIPAddress 'Microsoft.Network/publicIPAddresses@2024-05-01' = if (configureSitetosite) {
  name: mocOnpremGateway.publicIPAddressName
  location: location
  sku: {
    name: 'Standard'
    tier: 'Regional'
  }
  zones: pickZones('Microsoft.Network', 'publicIPAddresses', location, 3)
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource mocOnpremGatewayResource 'Microsoft.Network/virtualNetworkGateways@2024-05-01' = if (configureSitetosite) {
  name: mocOnpremGateway.name
  location: location
  properties: {
    ipConfigurations: [
      {
        properties: {
          privateIPAllocationMethod: 'Dynamic'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', mocOnpremNetworkResource.name, mocOnpremGateway.subnetName)
          }
          publicIPAddress: {
            id: mocOnpremGateway_publicIPAddress.id
          }
        }
        name: 'vnetGatewayConfig'
      }
    ]
    sku: {
      name: 'VpnGw2AZ'
      tier: 'VpnGw2AZ'
    }
    gatewayType: 'Vpn'
    vpnType: 'RouteBased'
    enableBgp: false
    bgpSettings: {
      asn: 65001
    }
  }
}

resource bastionHost_publicIPAddress 'Microsoft.Network/publicIpAddresses@2024-05-01' = {
  name: bastionHost.publicIPAddressName
  location: location
  sku: {
    name: 'Standard'
  }
  properties: {
    publicIPAllocationMethod: 'Static'
  }
}

resource bastionHost_nsg 'Microsoft.Network/networkSecurityGroups@2024-05-01' = {
  name: bastionHost.nsgName
  location: location
  properties: {
    securityRules: [
      {
        name: 'bastion-in-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: 'Internet'
          destinationPortRange: '443'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 100
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-control-in-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: 'GatewayManager'
          destinationPortRange: '443'
          destinationAddressPrefix: '*'
          access: 'Allow'
          priority: 120
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-in-host'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRanges: [
            '8080'
            '5701'
          ]
          sourceAddressPrefix: 'VirtualNetwork'
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 130
          direction: 'Inbound'
        }
      }
      {
        name: 'bastion-vnet-out-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRanges: [
            '22'
            '3389'
          ]
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 100
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-azure-out-allow'
        properties: {
          protocol: 'Tcp'
          sourcePortRange: '*'
          sourceAddressPrefix: '*'
          destinationPortRange: '443'
          destinationAddressPrefix: 'AzureCloud'
          access: 'Allow'
          priority: 120
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-out-host'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRanges: [
            '8080'
            '5701'
          ]
          sourceAddressPrefix: 'VirtualNetwork'
          destinationAddressPrefix: 'VirtualNetwork'
          access: 'Allow'
          priority: 130
          direction: 'Outbound'
        }
      }
      {
        name: 'bastion-out-deny'
        properties: {
          protocol: '*'
          sourcePortRange: '*'
          destinationPortRange: '*'
          sourceAddressPrefix: '*'
          destinationAddressPrefix: '*'
          access: 'Deny'
          priority: 1000
          direction: 'Outbound'
        }
      }
    ]
  }
}

resource bastionHostResource 'Microsoft.Network/bastionHosts@2024-05-01' = {
  name: bastionHost.name
  location: location
  properties: {
    ipConfigurations: [
      {
        name: 'IpConf'
        properties: {
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', mocOnpremNetworkResource.name, bastionHost.subnetName)
          }
          publicIPAddress: {
            id: bastionHost_publicIPAddress.id
          }
        }
      }
    ]
  }
}

resource nicNameWindows 'Microsoft.Network/networkInterfaces@2024-05-01' = {
  name: nicNameWindowsName
  location: location
  properties: {
    ipConfigurations: [
      {
        name: 'ipconfig'
        properties: {
          privateIPAllocationMethod: 'Dynamic'
          subnet: {
            id: resourceId('Microsoft.Network/virtualNetworks/subnets', mocOnpremNetworkResource.name, mocOnpremNetwork.subnetName)
          }
        }
      }
    ]
  }
}

resource windowsVM 'Microsoft.Compute/virtualMachines@2024-11-01' = {
  name: vmNameWindowsName
  location: location
  identity: {
    // It is required by the Guest Configuration extension.
    type: 'SystemAssigned'
  }
  properties: {
    hardwareProfile: {
      vmSize: vmSize
    }
    osProfile: {
      computerName: vmNameWindowsName
      adminUsername: adminUserName
      adminPassword: adminPassword
      windowsConfiguration: {
        enableAutomaticUpdates: true
        patchSettings: {
          assessmentMode: 'AutomaticByPlatform'
          patchMode: 'AutomaticByPlatform'
        }
      }
    }
    storageProfile: {
      imageReference: {
        publisher: 'MicrosoftWindowsServer'
        offer: 'WindowsServer'
        sku: windowsOSVersion
        version: 'latest'
      }
      osDisk: {
        createOption: 'FromImage'
      }
    }
    networkProfile: {
      networkInterfaces: [
        {
          id: nicNameWindows.id
        }
      ]
    }
    securityProfile: {
      // We recommend enabling encryption at host for virtual machines and virtual machine scale sets to harden security.
      encryptionAtHost: false
    }
  }
}

// https://learn.microsoft.com/azure/virtual-machines/extensions/guest-configuration#bicep-template
resource guestConfigExtensionWindows 'Microsoft.Compute/virtualMachines/extensions@2024-11-01' =  {
  parent: windowsVM
  name: 'AzurePolicyforWindows${windowsVM.name}'
  location: location
  properties: {
    publisher: 'Microsoft.GuestConfiguration'
    type: 'ConfigurationforWindows'
    typeHandlerVersion: '1.0'
    autoUpgradeMinorVersion: true
    enableAutomaticUpgrade: true
    settings: {}
    protectedSettings: {}
  }
}

output vpnIp string = mocOnpremGatewayResource!.properties.bgpSettings.bgpPeeringAddresses[0].tunnelIpAddresses[0]
output mocOnpremNetworkPrefix string = mocOnpremNetwork.addressPrefix
output mocOnpremGatewayName string = mocOnpremGateway.name
